# glam

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.devcontainer/: devcontainer-lock.json  devcontainer.json
docs/: AgentContext.md  CLI.md  Design.md  DesignPrinciples.md  DistilledDesign.md  Overview.md  Syntax.md  SyntaxCheatSheet.md
docs/agent_context/: evaluation.md  interaction_net_spike.md  interaction_nets.md  object_spike.md  objects.md  reflection.md
docs/architecture/: assembly.md  evaluation.md  reflection.md
docs/reviews/: Review_2026-07-16.md  Review_2026-07-19.md
samples/: README.md
samples/assembly/: hello_applicative.g  hello_arith.g  hello_dict.g  hello_dict_as_self_with.g  hello_import_at.g  hello_indexed.g  hello_lambda_sugar.g  hello_let.g  hello_names.g  hello_object_as.g  hello_object_escape.g  hello_object_expression.g  hello_object_extend.g  hello_object_extends.g  hello_object_extends_dict.g  hello_override.g  hello_slice.g  hello_text.g  hello_update.g  mixin_base.g  mixin_override.g
samples/config/: dev.g  minimal.g  unit_tests.g
samples/hello/: hello_applicative.g  hello_dict.g  hello_dict_as_with.g  hello_do.g  hello_floor.g  hello_import_as.g  hello_import_as_extend.g  hello_import_as_object_dep.g  (+22 more)
src/: README.md  api.rs  cli.rs  compiler.rs  core.rs  core_net.rs  diagnostic.rs  eval.rs  evaluation.rs  g_source.rs  g_syntax.rs  interaction_net.rs  lib.rs  list.rs  local_files.rs  main.rs  number.rs  reflection.rs  source.rs
tests/: cli.rs  hello_assemblies.rs  invalid_samples.rs  public_api.rs  sample_sources.rs
(+144 files in other folders)
