[package]
name = "glam"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
chumsky = "0.13.0"
fingertrees = "0.2.11"
internment = "0.8.6"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-rational = "0.4.2"
num-traits = "0.2.19"
rpds = "1.2.1"
sha2 = "0.10.9"

[profile.release]
opt-level = 3

[profile.release-small]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
